WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
295215
Fix inheritance of type compactness in TZone type specification
https://bugs.webkit.org/show_bug.cgi?id=295215
Summary
Fix inheritance of type compactness in TZone type specification
David Degazio
Reported
2025-06-30 12:11:36 PDT
TZone types currently track whether or not that type is compact-allocated, but this is based solely on whether the type was annotated with a compact or non-compact macro. Really, we want compactness to be inherited, so that if any class in an annotated type's hierarchy needs to support compact pointers, the derived type also must support compact pointers. This is currently respected in allocation logic, so we just need to also check requiresCompactPointers<T>() for the type when initializing the specification so everything is consistent.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-30 12:12:00 PDT
<
rdar://problem/154691668
>
David Degazio
Comment 2
2025-06-30 13:09:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47390
EWS
Comment 3
2025-07-01 12:00:42 PDT
Committed
296878@main
(2cf886ecf010): <
https://commits.webkit.org/296878@main
> Reviewed commits have been landed. Closing PR #47390 and removing active labels.
David Degazio
Comment 4
2025-07-07 14:41:31 PDT
Reopened Bugzilla. Revert
296878@main
due to apparent WebView regression, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=295550
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug