Fix inheritance of type compactness in TZone type specification https://bugs.webkit.org/show_bug.cgi?id=295215 rdar://154691668

Reviewed by Mark Lam.

Ensures that whenever bmalloc::api::requiresCompactPointers<T> is true,
the allocation mode of T's TZone type specification is Compact.

* Source/bmalloc/bmalloc/TZoneHeap.h:
* Source/bmalloc/bmalloc/TZoneHeapInlines.h:

Canonical link: https://commits.webkit.org/296878@main